# Triad

./: CMakeLists.txt  Doxyfile  NotePage.qml  README.md  create_text_edit.js  documenthandler.cpp  documenthandler.h  imagebaseconverter.cpp  imagebaseconverter.h  main.qml  qml.qrc  storageinterface.cpp  storageinterface.h  textedit.qml  triad.pro
doc/html/: access_8h_source.html  annotated.html  classAccess-members.html  classDocumentHandler-members.html  classDocumentHandler.html  classDomItem-members.html  classDomItem.html  classImageBaseConverter-members.html  classImageBaseConverter.html  classNoteModel-members.html  classNoteModel.html  classStorageInterface-members.html  classStorageInterface.html  classes.html  dir_09e761304027c904456130627fd4dcf5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  documenthandler_8cpp_source.html  documenthandler_8h_source.html  domitem_8cpp_source.html  files.html  hierarchy.html  index.html  main_8cpp_source.html  notemodel_8cpp_source.html  notemodel_8h_source.html  pages.html  storageinterface_8cpp_source.html  storageinterface_8h_source.html
doc/latex/: annotated.tex  classDocumentHandler.eps  classDocumentHandler.tex  classImageBaseConverter.eps  classNoteModel.eps  (+6 more)
gui/: NoteBrowser.qml  NotePage.qml  contentcontainer.qml  create_text_edit.js  main.qml  manipulate.js  qml.qrc  textedit.qml
includes/: documenthandler.h  domitem.h  imagebaseconverter.h  notemodel.h  storageinterface.h
src/: access.cpp  access.h  documenthandler.cpp  domitem.cpp  imagebaseconverter.cpp  main.cpp  notemodel.cpp  storageinterface.cpp
(+43 files in other folders)
